# robot_rmf_simmulation

./: README.md
free_fleet/ff_examples_ros2/launch/: turtlebot3_world_ff_server.launch.xml
rmf_server/rmf_setup/: package.xml  setup.cfg  setup.py
rmf_server/rmf_setup/launch/: fleet_adapter.launch.xml  robot_rmf.launch.xml
rmf_server/rmf_setup/rmf/: custom_map.building.yaml  custom_map.yaml  custom_map_dashboard_config.json  custom_map_graph.yaml
rmf_server/rmf_setup/rmf_old/: tinyRobot_config.yaml  world_map.building.yaml  world_map_dashboard_config.json  world_map_graph.yaml
rmf_server/rmf_setup/rmf_setup/: fake_battery.py  fake_door.py
turtlebot3/turtlebot3_bringup/launch/: ff_client.launch.py  ff_server.launch.xml  freefleet_and_rmf_server.launch.xml  rviz2.launch.py  simulator_launch.launch.py  turtlebot3_state_publisher.launch.py  turtlebot3_world_ff_client.launch.xml
turtlebot3/turtlebot3_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
turtlebot3/turtlebot3_cartographer/map/: world_map.pgm
turtlebot3/turtlebot3_navigation2/: CMakeLists.txt
turtlebot3/turtlebot3_navigation2/launch/: multi_navigate.launch.py  navigate.launch.py  navigate3.launch.py  navigation2.launch.py
turtlebot3/turtlebot3_navigation2/map/: custom_map.pgm  world_map.yaml
turtlebot3/turtlebot3_navigation2/src/: initpose.py
turtlebot3_simulations/turtlebot3_gazebo/launch/: robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_my_world.launch.py  turtlebot3_world.launch.py
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
(+3 files in other folders)
